# Fractal_Generator

./: CMakeLists.txt  glad.c  main.cpp
include/: EBO.h  ShaderClass.h  VAO.h  VBO.h
include/glad/: glad.h
shaders/: default.frag  default.vert
src/: EBO.cpp  ShaderClass.cpp  VAO.cpp  VBO.cpp
src/glfw/: Makefile  cmake_install.cmake  glfw3.pc  glfw_config.h  wayland-idle-inhibit-unstable-v1-protocol.c
